added Durability and availability

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -219,3 +219,32 @@ IAM User Other AWS account       ===================>  S3 Bucket + S3 Bucket pol
 6. Must give proper IAM permissions to S3.
 7. **CRR - USE CASES:** Compliance, lowe latency access, replication across accounts.
 8. **SRR - USE CASES:** Log aggregation, live replication betweeen production and test accounts.
+
+**S3 STORAGE CLASSES**
+//IMPORTANT:
+
+1. Amazon S3 Standard - Standard General Purpose.
+2. Amazon S3 Standard - Standard Infrequent Access (IA).
+3. Amazon S3 Standard - One Zone-Infrequent.
+4. Amazon S3 Standard - Glacier Instant Retrieval.
+5. Amazon S3 Standard - Glacier Flexible Retrieval.
+6. Amazon S3 Standard - Glacier Deep Archive.
+7. Amazon S3 Standard - Intelligent Tiering.
+
+**S3 DURABILITY AND AVAILABILITY**
+
+Durability :
+
+Represents how many times an object is going to be lost by Amazon S3.
+
+1. High durability (99.99999999%, 11 9's) of objects across multiple AZ.
+2. If you store 10.000.000 objects with Amazon S3, you can on average expect to incur a loss of a single object once every 10.000 years.
+3. Same for all storage classes.
+
+Availability :
+
+Represents how readily a service is and this depends on the storage class.
+
+1. Measures how readily available a service is :
+2. Varies depending on storage class.
+3. Example: S3 Standard has 99.9999% availability = not available 53 minutes a year.
