Added OBJECT LOCK & GLACIER VAULT LOCK

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -223,13 +223,13 @@ IAM User Other AWS account       ===================>  S3 Bucket + S3 Bucket pol
 **S3 STORAGE CLASSES**
 //IMPORTANT:
 
-1. Amazon S3 Standard - Standard General Purpose.
-2. Amazon S3 Standard - Standard Infrequent Access (IA).
-3. Amazon S3 Standard - One Zone-Infrequent.
-4. Amazon S3 Standard - Glacier Instant Retrieval.
-5. Amazon S3 Standard - Glacier Flexible Retrieval.
-6. Amazon S3 Standard - Glacier Deep Archive.
-7. Amazon S3 Standard - Intelligent Tiering.
+1. Amazon S3 Standard - **Standard General Purpose.**
+2. Amazon S3 Standard - **Standard Infrequent Access (IA).**
+3. Amazon S3 Standard - **One Zone-Infrequent.**
+4. Amazon S3 Standard - **Glacier Instant Retrieval.**
+5. Amazon S3 Standard - **Glacier Flexible Retrieval.**
+6. Amazon S3 Standard - **Glacier Deep Archive.**
+7. Amazon S3 Standard - **Intelligent Tiering.**
 
 **S3 DURABILITY AND AVAILABILITY**
 
@@ -248,3 +248,63 @@ Represents how readily a service is and this depends on the storage class.
 1. Measures how readily available a service is :
 2. Varies depending on storage class.
 3. Example: S3 Standard has 99.9999% availability = not available 53 minutes a year.
+
+**S3 STANDARD GENERAL PURPOSE**
+
+1. 99.999%
+2. Used for frequently accessed data.
+3. Low latency and high throughput.
+4. Sustain 2 concurrent facility failures.
+5. Use cases : Big Data analytics, mobile & gaming applications, content distribution....
+
+**S3 STORAGE CLASSES - INFREQUENT ACCESS**
+
+1. For data that is less frequently accessed, but requires rapid access when needed.
+2. Lower cost than S3 Standard.
+3. Amazon S3 Standard Infrequent Access (S3 Standard IA).
+   a. 99.9% Availability.
+   b. Use cases : Disaster Recovery, backups.
+4. Amazon S3 One Zone Infrequent Access (S3 One Zone IA)
+   a. High durability (99.9999999999%) in a single AZ; data lost when AZ is detroyed.
+   b. 99.5% Availability.
+   c. Use Cases : Storing secondary backup copies of on-premise data, or data you can recreate.
+
+**S3 GLACIER STORAGE CLASSES**
+
+1. Low cost object storage meant for archiving / backup.
+2. Pricing: Price for storage + object retrieval cost.
+
+3. Amazon S3 Glacier Instant Retrieval
+   a. Millisecond retrieval, great for data accessed once a quarter.
+   b. Minimun storage duration of 90 days.
+4. Amazon S3 Glacier Flexible Retrieval (formerly Amazon S3 Glacier):
+   a. Expedited (I to 5 minutes), standard (3 to 5 hours), Bulk (2 to 12 hours) - free.
+   b. Minumun storage duration of 90 days.
+5. Amazon S3 Glacier Deep Archive - for long term storage:
+   a. Standard(12 hours), Bulk (48 hours).
+   b. Minumun storage duration of 180 days.
+
+**S3 INTELLIGENT TIERING**
+
+1. Small monthly monitoring and auto tiering fee.
+2. Moves objects automatically between Access Tiers based on usage.
+3. There are no retrieval charges in S3 Intelligent Tiering.
+
+4. Frequent Access Tier(automatic) : default tier.
+5. Infrequent Access Tier(automatic) : Objects not accessed for 30 days.
+6. Archive Instant Access Tier(automatic) : objects not accessed for 90days.
+7. Archive Access tier(optional) : configurable from 90 days to 700+ days.
+8. Deep archive access tier (optional) : config. from 180 days to 700+ days.
+
+![Drag Racing](images/S3_CLASSES_COMPARISON.png)
+
+**S3 OBJECT LOCK & GLACIER VAULT LOCK**
+
+1. S3 OBJECT LOCK
+   a. Adopt a WORM (Write Once Read Many) model.
+   b. Block an object version deletion for a specified amount of time.
+
+2. GLACIER VAULT LOCK
+   a. Adopt a WORM (Write Once Read Many) model.
+   b. Lock the policy for future edits (can no longer be charged).
+   c. Helpful for compliance an data retention.
