--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -308,3 +308,16 @@ Represents how readily a service is and this depends on the storage class.
    a. Adopt a WORM (Write Once Read Many) model.
    b. Lock the policy for future edits (can no longer be charged).
    c. Helpful for compliance an data retention.
+
+3. S3 ENCRYPTION
+
+In the first case we send the file into the S3 bucket, and is uploaded as is. This is a no encryption type of scheme, because the file hasn't been modified. It hasn't been encrypted.
+
+Now we have a server side encryption, the user wants to upload a file into amazon s3, the server is going to encrypt the file server side. so the server encrypts the file after reveiving it.
+
+That's why it's called server side encryption AND WE PROTECT THE FILE FOR UNAUTHORIZED USAGE.
+
+And in the Client Side Encryption, The client is the user and therefore this user will encrypt the file before uploading it.
+So the encryption is happening client side and then it gets uploadded into Amazon S3. so the file is already encrypted while being in Amazon S3 and it has been encrypte by the user NOT BY THE SERVER.
+
+![Drag Racing](images/S3_ENCRYPTION.png)
