added s3 snow family

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -321,3 +321,18 @@ And in the Client Side Encryption, The client is the user and therefore this use
 So the encryption is happening client side and then it gets uploadded into Amazon S3. so the file is already encrypted while being in Amazon S3 and it has been encrypte by the user NOT BY THE SERVER.
 
 ![Drag Racing](images/S3_ENCRYPTION.png)
+
+**SHARED RESPONSIBILITY MODEL FOR S3**
+
+![Drag Racing](images/S3_SHARED_RESPONSABILITY_MODEL.png)
+
+**AWS SNOW FAMILY**
+
+1. Highly secure portable devices to collect and process data at the edge, and migrate data into and out of AWS.
+
+a. Data migration: Snowcone | Snowball Edge | Snowmobile
+b. Edge Computing: Snowcone | SNowball Edge
+
+NOTE: IF WE LOOK AT THE TIME IT TAKES TO TRANSFER A LOT OF DATA OVER THE NETWORK. IT CAN TAKE A LOT OF TIME.
+
+![Drag Racing](images/S3_DATA_MIGRATIONS.png)
