added S3 DIAGRAM DIRECT UPLOAD TO S3

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -210,6 +210,7 @@ IAM User Other AWS account       ===================>  S3 Bucket + S3 Bucket pol
 ![Drag Racing](images/S3_LOGGING.png)
 
 **S3 REPLICATION (CRR & SRR)**
+**CROSS REGION REPLICATION AND SAME REGION REPLICATION**
 
 1. Must enable versioning in source and destination.
 2. Cross Region Replication (CRR).
@@ -334,5 +335,19 @@ a. Data migration: Snowcone | Snowball Edge | Snowmobile
 b. Edge Computing: Snowcone | SNowball Edge
 
 NOTE: IF WE LOOK AT THE TIME IT TAKES TO TRANSFER A LOT OF DATA OVER THE NETWORK. IT CAN TAKE A LOT OF TIME.
+FOR EXAMPLE, IF WE WANT TO TRANSFER 100 TERABYTES OVER ONE GIGABITS PER SECOND NETWORK LINE, IT WILL TAKE US 12 DAYS TO ACHIEVE IT.
+
+IF WE DO A PETABYTE, IT WILL TAKE FOREVER.
 
 ![Drag Racing](images/S3_DATA_MIGRATIONS.png)
+
+**DIAGRAMS**
+
+1. Direct upload to S3:
+
+NOTE: If we wanted to directly upload a file into Amazon S3, We have the clients send the data into Amazon S3.
+But with the Snow Family or with the Snowball device, the clients request this novel device. We receive it via the post AWS will deliver the device to us. We loaded the data directly onto the devices locally, and then we ship back the device to AWS into an AWS facility then they will take the device and they will plug it into their own infrastructure and then the data will be imported or exported based on what you wanna do to an Amazon S3 bucket and you are good to go.
+
+This is a way to transfer data to AWS, but through the physical, no the network route.
+
+![Drag Racing](images/S3_DIAGRAMS.png)
