added SNOWBALL EDGE FOR DATA TRANSFERS

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -351,3 +351,21 @@ But with the Snow Family or with the Snowball device, the clients request this n
 This is a way to transfer data to AWS, but through the physical, no the network route.
 
 ![Drag Racing](images/S3_DIAGRAMS.png)
+
+**SNOWBALL EDGE (FOR DATA TRANSFERS)**
+
+NOTE: So now what sort of devices do we have ??
+
+1.  Physical data transport solution : move TBs or PBs of data **in our out** of AWS.
+2.  Alternative to moving data over the network (and paying network fees).
+3.  Pay per data transfer job.
+4.  Provide block storage and Amazon S3-compatible object storage.
+5.  Snowball Edge Storage Optimized
+
+            a. 80 TB of HDD capacity for block volume and S3 compatible object storage.
+
+6.  Snowball Edge Compute Optimized
+
+            a. 42 TB of HDD capacity for block volume and S3 compatible object storage.
+
+7.  Use cases : large data cloud migrations, DC decommission, disaster recovery.
