added AWS SNOWCONE

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -369,3 +369,13 @@ NOTE: So now what sort of devices do we have ??
             a. 42 TB of HDD capacity for block volume and S3 compatible object storage.
 
 7.  Use cases : large data cloud migrations, DC decommission, disaster recovery.
+
+**AWS SNOWCONE**
+
+1. Small, portable computing, anywhere, rugged & secure, withstands harsh environments.
+2. Light (4.5 pounds, 2.1 kg).
+3. Device used for edge computing, storage, and data transfer.
+4. 8 TBs of usable storage.
+5. Use Snowcone where Snowball does not fit (space-constrained eviroment).
+6. Must provide your own battery / cables.
+7. Can be sent to AWS offline, or connect it to internet and use AWS DataSync to send data.
