--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -379,3 +379,10 @@ NOTE: So now what sort of devices do we have ??
 5. Use Snowcone where Snowball does not fit (space-constrained eviroment).
 6. Must provide your own battery / cables.
 7. Can be sent to AWS offline, or connect it to internet and use AWS DataSync to send data.
+
+**AWS MOBILE**
+
+1. Transfer exabytes of data (I EB = 1.000 PB= 1.000.000TBs).
+2. Each Snowmobile has 100 PB of capacity (use multiple in parallel).
+3. High Security : temperature controlled, GPS, 24/7 video surveillance.
+4. Better than snowball if you transfer more than 10 PB.
