added How do we use a snow family device?

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -386,3 +386,16 @@ NOTE: So now what sort of devices do we have ??
 2. Each Snowmobile has 100 PB of capacity (use multiple in parallel).
 3. High Security : temperature controlled, GPS, 24/7 video surveillance.
 4. Better than snowball if you transfer more than 10 PB.
+
+![Drag Racing](images/S3_SNOW_FAMILY.png)
+
+**NOTE: HOW DO WE USE A SNOW FAMILY DEVICE???**
+
+**SNOW FAMILY -- USAGE PROCESS**
+
+1. Request Snowball devices from the AWS console for delivery.
+2. Install the snowball client / AWS OpsHub on your servers.
+3. Connect the snowball to your servers and copy files using the client.
+4. Ship back the device when you're done (goes to the right AWS facility).
+5. Data will be loaded into an S3 bucket.
+6. Snowball is completely wiped.
