added Snow Family - Edge COmputing

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -399,3 +399,49 @@ NOTE: So now what sort of devices do we have ??
 4. Ship back the device when you're done (goes to the right AWS facility).
 5. Data will be loaded into an S3 bucket.
 6. Snowball is completely wiped.
+
+**WHAT IS EDGE COMPUTING??**
+
+Edge computing is when you process data, while it's being created at an edge location.
+
+1.  Process data while it's being created on **an edge location.**
+
+         (Edge Location: Is anything that really doesn't have internet or that is far away from a cloud because they can produce data but they not necessarily have internet connectivity.)
+
+         a. A truck on the road, a ship on the sea, a mining station underground.
+
+2.  These locations may have :
+
+            - Limited / no internet access.
+            - Limited / no easy access to computing power.
+
+3.  We setup a Snowball Edge / Snowcone device to do edge computing.
+
+4.  Use cases of Edge Computing:
+
+            - Preprocess Data.
+            - Machine learning at the edge.
+            - Transcoding media streams.
+
+5.  Eventually (if need be) we can ship back the device to AWS (for transferring data for example).
+
+**SNOW FAMILY - EDGE COMPUTING**
+
+1.  Snowcone (smaller)
+
+            - 2 CPUs, 4 GB of memory, wired or wireless access.
+            - USB-C power using a cord or the optional battery.
+
+2.  Snowball Edge - Compute Optimized
+
+            - 52 vCPUs, 208 GiB of RAM.
+            - Optional GPU (useful for video processing or machine learning).
+            - 42 TB usable storage.
+
+3.  Snowball Edge - Storage Optimized.
+
+            - Up to 40 vCPUs, 80 GiB of RAM.
+            - Object storage clustering available.
+
+4.  All: Can run EC2 Instances & AWS Lambda functions (using AWS loT Greengrass).
+5.  Long-term deployment options: I and 3 years discounted pricing.
