added AWS OpsHub

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -445,3 +445,14 @@ Edge computing is when you process data, while it's being created at an edge loc
 
 4.  All: Can run EC2 Instances & AWS Lambda functions (using AWS loT Greengrass).
 5.  Long-term deployment options: I and 3 years discounted pricing.
+
+**AWS OpsHub**
+
+1.  Historically, to use Snow Family devices, you needed a CLI (Command Line Interface Tool).
+2.  Today, you can use AWS OpsHub (a software you install on your computer / laptop) to manage your snow family device.
+
+            a. Unlocking and configuring single our clustered devices.
+            b. Transferring files.
+            c. Launching and managing instances running on Snow Family Devices.
+            d. Monitor device metrics (storage capacity, active instances on your device).
+            e. Launch compatible AWS services on your devices (ex: Amazon EC2 instances , AWS DataSync, Network File System (NFS)).
