added STORAGE GATEWAY

--- a/AWS-certified-Cloud-Practitioner/subjects/S3.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/S3.md
@@ -456,3 +456,44 @@ Edge computing is when you process data, while it's being created at an edge loc
             c. Launching and managing instances running on Snow Family Devices.
             d. Monitor device metrics (storage capacity, active instances on your device).
             e. Launch compatible AWS services on your devices (ex: Amazon EC2 instances , AWS DataSync, Network File System (NFS)).
+
+**Hybrid Cloud for Storage**
+
+1.  AWS is pushing for "hybrid cloud".
+
+            a. Part of your infrastructure is on-premises.
+            b. Part of your infrastructure is on the cloud.
+
+2.  This can be due to :
+
+            a. Long cloud migrations.
+            b. Security requirements.
+            c. Compliance requirements.
+            d. IT strategy.
+
+3.  S3 is a proprietary storage technology (unlike EFS / NFS), so how do you expose the S3 data on-premise???
+
+4.  AWS **STORAGE GATEWAY**.
+
+**AWS STORAGE CLOUD NATIVE OPTIONS**
+
+**Where does the storage gateway fit in all this?**
+
+            IMPORTANT:
+
+            a. Bridge between on-premise data and cloud data in S3.
+            b. Hybrid storage service to allow on-premises to seamlessly use the AWS Cloud.
+            c. Use cases:
+
+                  - Disaster recovery.
+                  - Backup and restore.
+                  - Tiered storage.
+            d. Types of Storage Gateway:
+
+                  - File Gateway.
+                  - Volume Gateway.
+                  - Tape Gateway.
+            e. No need to know the types at the exam !!!
+
+![Drag Racing](images/S3_STORAGECLOUD_NATIVE_OPTIONS.png)
+![Drag Racing](images/S3_STORAGE_GATEWAY.png)
