added DATABASES AND SHARED RESPONSIBILITY ON AWS

--- a/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
@@ -30,3 +30,17 @@ From an exam perspective, it's up to you to understand, which database is going 
         d. Highly functional : types optimized for the data model.
 
 4.  Examples: Key-value, document, graph, in-memory, search databases.
+
+![Drag Racing](images/NoSQL_EXAMPLE.png)
+
+## **DATABASES & SHARED RESPONSIBILITY ON AWS**
+
+1.  AWS offers use to manage different databases.
+2.  Benefits include:
+
+        a. Quick Provisioning, High Availability, Vertical and Horizontal Scaling.
+        b. Automated Backup & Restore, Operations, Upgrades.
+        c. Operating System Patching is handled by AWS.
+        d. Monitoring, alerting.
+
+NOTE: Many databases technologies could be run on EC2, but you must handle yourself the resiliency, backup, patching, high, availability, fault, tolerance, scaling...
