added AMAZON AURORA

--- a/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
@@ -44,3 +44,53 @@ From an exam perspective, it's up to you to understand, which database is going 
         d. Monitoring, alerting.
 
 NOTE: Many databases technologies could be run on EC2, but you must handle yourself the resiliency, backup, patching, high, availability, fault, tolerance, scaling...
+
+# **DATABASES - AWS RDS OVERVIEW**
+
+1.  RDS stands for Relational Database Service.
+2.  It's a managed DB service for DB use SQL as a query language.
+3.  It allows you to create databases in the cloud that are managed by AWS.
+
+        a. Postgres.
+        b. MySQL.
+        c. MariaDB.
+        e. Oracle.
+        f. Microsoft SQL Server.
+        g. Aurora (AWS Proprietary database).
+
+NOTE: **WHY WOULD WE USE RDS INSTEAD OF DEPLOYING OUR OWN DATABASE ON EC2????**
+
+**ADVANTAGE OVER USING RDS VERSUS DEPLOYING DB ON EC2**
+
+1.  RDS Is a managed service:
+
+        a. Automated provisioning, OS patching. (WILL BE DONE BY AWS)!
+        b. Continuos backups and restore to specific timestamp (Point in Time Restore)!!
+        c. Monitoring dashboards.
+        d. Read replicas for improved read performance.
+        e. Multi AZ setup for DR (DISASTER RECOVERY).
+        f. Maintenance windows for upgrades.
+        g. Scaling capability (vertical and horizontal).
+        h. Storage backed by EBS (gp2 or io1) type volume.
+
+IMPORTANT: BUT you can't SSH into your instances, we cannot use the SSH utility to see what's going on within our database.
+
+**RDS SOLUTION ARCHITECTURE**
+
+It's fronting multiple backend EC2 instances, they are possibly into an auto scaling group, and they need to store and share the data somewhere, and this is structured data so they're not going.
+
+To use EBS or EFS or EC2 instance store, they will be using a database. IN THIS EXAMPE IS GOING TO BE SQL DATABASE .
+and the EC2 instances will be connecting to database, and doing read/writes and all at once.
+
+So they will be sharing the database in the backend.
+
+![Drag Racing](images/RDS_SOLUTIONS.png)
+
+**AMAZON AURORA**
+
+1. Aurora is a proprietary technology from AWS (not open sourced).
+2. PostgreSQL and MySQL are both supported as Aurora DB.
+3. Aurora is "AWS cloud optimized" and claims 5x performance improvement over MySQL on RDS, over 3x the performance of Postgres on RDS.
+4. Aurora storage automatically grows in increments of 10GB, up to 64 TB.
+5. Aurora costs more than RDS **(20% more)** but is more efficient.
+6. Not in the free tier.
