--- a/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
@@ -94,3 +94,24 @@ So they will be sharing the database in the backend.
 4. Aurora storage automatically grows in increments of 10GB, up to 64 TB.
 5. Aurora costs more than RDS **(20% more)** but is more efficient.
 6. Not in the free tier.
+
+**DATABASE HANDS ON**
+
+1. Create database.
+2. Choose database creation method = Easy Create.
+
+![Drag Racing](images/CREATE_DATABASE.png)
+
+3. Engine Options = MySQL.
+
+![Drag Racing](images/ENGINE_OPTIONS.png)
+
+4.  Edition
+
+        a. MySQL Community.
+
+5.  Templates
+
+        a. Free Tier.
+
+![Drag Racing](images/DATABASE_CREATED.png)
