added RDS DEPLOYMENTS READ REPLICA AND MULTI AZ

--- a/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
@@ -115,3 +115,29 @@ So they will be sharing the database in the backend.
         a. Free Tier.
 
 ![Drag Racing](images/DATABASE_CREATED.png)
+
+**RDS DEPLOYMENTS : Read Replicas, Multi AZ**
+
+**READ REPLICAS :** That reads from your main RDS database, but say that now you need to scale the read workloads, we have more and more applications. that need to read more and more data from RDS.
+
+The way you can do it is by creating Read Replica, so that means that there is gonna be some copies, SOME REPLICAS OF YOUR RDS DATABASE.
+
+That are going to be created and this is going to allow your applications to read from this read replica also. and therefore
+you are distributing the reads, to many different RDS databases.
+
+So you can create up to 5 read replicas, When it comes to writing data, writing data is only done to the main database, so your application still have to write to the only one central RDS database.
+
+**MULTI-AZ**: This is helpful when you have to have failover in case of an AZ outage. So in case in the availability zone, LIKE CRASHES, and this give you high availability.
+
+In this example your applications to read and write from the same main RDS database.
+But we are going to set up, a replication crozz AZ, so in another different availability zone.
+And this is going to be failover database, and this is why it's called Multi-AZ because it's a different AZ.
+
+Now in case the main RDS database crashes, for whatever reason maybe there's an issue with it, or maybe because the AZ is having problems, then RDS will trigger a failover.
+
+AND THEN your application will failover to developer database in a different AZ.
+So in this case, data is only read and written to the main database. The failover DB is passive, it's not accessible until there is an issue, with the main database.
+
+and you can only have one other AZ Zone as a failover AZ.
+
+![Drag Racing](images/RDS_DEPLOYMENTS.png)
