added ELASTI CACHE

--- a/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
@@ -141,3 +141,33 @@ So in this case, data is only read and written to the main database. The failove
 and you can only have one other AZ Zone as a failover AZ.
 
 ![Drag Racing](images/RDS_DEPLOYMENTS.png)
+
+**RDS DEPLOYMENTS: MULTI-REGION**
+
+                a. Multi-Region (Read Replicas).
+    This time, instead of being in the same region, they are across defferent regions.
+    In this example we have EU-West one for RDS database, and we are going to create a read replica in US-East two.
+    and applications in US-East two can read locally from this read replica.
+
+    But anytime this application needs to write data, the writes need to happen across region, and we need to write the data to USE One.
+
+    Same if you weere to have also another region in AP-Southeast two so in Australia, You'd have the same concepts.
+    So why would you want a multi region type of deployments??
+
+            1. Because you want to set up a disaster recovery strategy, in case of a region issue. So if EU-West one is having a regional issue. Then you have a backup in either ES-East two. or AP-East-two and this is why it's a disaster recovery strategy.
+
+            2. Our applications that are in different regions get better performance, because they're read from a local database, so they have less latency.
+
+            3. You need to understant that bacause you are replicating data across regions, then there is going to be a replication cost associated with a network transfers of data between regions.
+
+![Drag Racing](images/RDS_DEPLOYMENTS_MULTIREGION.png)
+
+# **AMAZON ELASTICACHE**
+
+1. The same way RDS is to get managed Relational Databases.
+2. ElastiCache is to get managed Redis or Memcached.
+3. Caches are in-memory databases with high performance, low latency.
+4. Helps reduce load off databases for read intensive workloads.
+5. AWS TAKES CARE OF OS maintenance / patching, optimizations, setup, configuration, monitoring, failure recovery and backups.
+
+![Drag Racing](images/ELASTI_CACHE.png)
