added data bases

--- a/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/07.DatabasesIntro.md
@@ -171,3 +171,90 @@ and you can only have one other AZ Zone as a failover AZ.
 5. AWS TAKES CARE OF OS maintenance / patching, optimizations, setup, configuration, monitoring, failure recovery and backups.
 
 ![Drag Racing](images/ELASTI_CACHE.png)
+
+# **DYNAMO DB OVERVIEW**
+
+1. Fully managed Highly available with replication across 3 AZ.
+2. NoSQL database, not a relational database.
+3. Scales to massive workloads, distributed "serverless" database.
+4. Millions of requests per seconds, trillions of row, 100s ofTB of storage.
+5. Fast and consistent in performance.
+6. **Single-digit milisecond latency - low latency retrieval.** ====> EXAM KEYWORDS
+7. Integrated with IAM for security, authorization and administration.
+8. Low cost and auto scaling capabilities.
+9. Standard and Infrequent Access (IA) Table Class.
+
+**DYNAMO DB TYPE OF DATA**
+
+1. Dynamo DB is a key/value database.
+
+NOTE: You have a primary key, which is made of one or two columns, a partition key and a sort key. And then attributes on the right hand side. Where you can define your own columns for your data.
+
+Finally, all the items are going to be row by row, and this is how a DynamoDB table works.
+But again, remember its a NoSQL database.
+
+It has low latency retrieval of data and you also get access to a serverless database.
+
+**DYNAMO DB ACCELERATOR - DAX**
+
+Then we have DynamoDB Accelerator also called DAX.
+
+1. Fully Managed in-memory cache for Dynamo DB.
+2. 10X performance imporvement -single- digit milliseconds latency to microseconds latency- when accessing your Dynamo DB tables.
+3. Secure, highly scalable & highly available.
+4. Difference with ElastiCache at the CCP level : DAX is only used for and is integrated with Dynamo DB, while ElastiCache can be used for other databases.
+
+# **REDSHIFT**
+
+1. Redshift is based on PostgreSQL, but it's not used for OLTP.
+2. It's OLAP online analytical procesing(analytics and data **warehousing**).
+3. Load data once every hour, not every second.
+4. 10x better performance than other data warehouses, scale to PBs of data.
+5. Columnar storage of data (instead of row based).
+
+# **EMR**
+
+1. EMR stands for ELASTIC MAPREDUCE.
+2. EMR helps creating **Hadoop clusters** (Big Data) to analyze and process vas amount of data.
+3. The clusters can be made of hundreds of EC2 instances.
+4. Also supports Apache, Spark, HBase, Presto, Flink.
+5. USE CASES : DATA PROCESSING, MACHINE LEARNING, WEB INDEXING, BIG DATA.
+
+# **ATHENA**
+
+1. Serverless query service to perform analytics against S2 objects.
+2. Uses Standards SQL language to query the files.
+3. Supports CSV JSON ORC Avro and Parquet.
+
+# **QUICKSIGHT**
+
+1. Serverless machine learning-powered business intelligence service to create interactive dashboards.
+2. Fast, automatically scalable, emdeddable, with per-session pricing.
+
+USES CASES: Business analytics, Building visualizations, Perform ad-hoc analysis, Get business insights using data.
+
+# **DOCUMENT DB**
+
+1. DocumentDB is the same for MongoDB (which is a NoSQL database).
+
+2. MongoDb is used to store, query and index JSON data.
+3. Similar "deployments concepts" as Aurora.
+
+# **NEPTUNE**
+
+1. Fully managed **graph** database.
+2. A popular graph dataset would be a social network.
+
+# **QLDB**
+
+1. QUANTUM LEDGER DATABASE.
+2. A ledger is a book recording financial transactions.
+3. Fully managed, serverless, high available, replications across 3 AZ.
+4. USED TO REVIEW HISTORY OF ALL THE CHANGES MADE TO YOUR APPLICATION DATA OVERTIME.
+5. IMMUTABLE SYSTEM.
+
+# **GLUE**
+
+1. Managed extract, transform, and load (ETL) service.
+2. Useful to prepare and transform data for analytics.
+3. Fully **serverless** service.
