added Other compute services

--- a/AWS-certified-Cloud-Practitioner/subjects/08.OtherComputeServices:ECS,Lambda,Batch,Lightsail.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/08.OtherComputeServices:ECS,Lambda,Batch,Lightsail.md
@@ -57,3 +57,81 @@
     NOTE: LAMBDA:
 
             Allows you to run functions in the cloud.
+
+# **AWS LAMBDA**
+
+**AMAZON EC2**
+
+1. Virtual Servers in the Cloud.
+2. Limited by RAM and CPU.
+3. COntinuously running.
+4. Scalling means intervention to add / remove servers.
+
+**AMAZON LAMBDA**
+
+1. Virtual functions - no servers to manage !.
+2. Limited by time - short executions.
+3. Run on-demand.
+4. Scalling is automated.
+
+## **BENEFITS**
+
+1.  Easy Pricing :
+    Pay per request and compute time.
+    Free tier of 1.000.000 AWS Lambda request and 400.000 GBs of compute time.
+    Inetgrated with the whole AWS suite of services.
+    NOTE: Event-Driven: Functions get invoked by AWS when needed.
+    Integrated with many programming languages.
+    Easy monitoring through AWS CLoudWatch.
+    Easy to get more resources per functions (up to 10GB of RAM)
+    Increasing RAM will also improve CPU and network!!
+
+## **LAMBDA CONTAINER IMAGE**
+
+1. The container image must implement the Lambda Runtime API.
+2. ECS/ Fargate is preferred for running arbitrary Docker Images.
+
+# **AMAZON API GATEWAY**
+
+1.  Example : building a serverless API.
+
+CLIENT ====> REST API ====> API GATEWAY ===> PROXY REQUESTS ===> LAMBDA ===> CRUD ===> DYNAMODB.
+
+1. Easily create, publish, maintain, monitor and secure APIs.
+2. Serverless and scalable.
+3. Supports RESTful APIs and WebSocket APIs.
+4. Support for security, user authentication, API throttling, API keys, monitoring.
+
+# **BATCH**
+
+1. Managed batch processing at any scale.
+2. Efficiently run 100,000s of computing batch job on AWS.
+3. A "batch" job is a job with a start and an end (opposed to continuous).
+4. Batch will dunamically launch EC2 instances or spot instances.
+5. AWS Batch provisions the right amount of compute / memory.
+6. You submit or schedule batch jobs and AWS Batch does the rest!
+7. Batch jobs are defined as DOCKER IMAGES and run on ECS.
+8. Helpful for cost optimizations and focusing less on the infrastructure.
+
+```
+AMAZON S3 ===> TRIGGER ===> AWS BATCH ===> INSERT PROCESSED OBJECT ===> AMAZON S3.
+
+                                ECS INSTANCE       ECS
+                                SPOT INSTANCE
+```
+
+## **BATCH VS LAMBDA**
+
+1.  Lambda
+
+        1. Time Limit.
+        2. Limited Runtimes.
+        3. Limited Temporary Disk Space.
+        4. Serverless.
+
+2.  Batch
+
+        1. No Time Limit.
+        2. Any runtime as long as it's packaged as a Docker Image.
+        3. Rely on EBS / intance store for disk space.
+        4. Relies (on EC2 can be managed by AWS)
