added Elastic Beanstalk overview

--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -72,3 +72,78 @@ NOTE: This template is actually going to be used to create an EC2 Instance, So t
 **Events happening for our stack creation**
 
 ![Drag Racing](images/Events_Cloud_Formation.png)
+
+# **CLOUD DEVELOPMENT KIT (CDK)**
+
+1. Define your cloud infrastructure using a familiar language:
+
+   1. Javascript / TypeScript / Python / Java / and .NET.
+
+2. The code is "compiled" into a CloudFormation template (JSON/YAML).
+3. You can therefore deploy infrastructure and application runtime code together.
+   1. Great for Lambda functions.
+   2. Great for Docker containers in ECS/EKS.
+
+![Drag Racing](images/cdk_example.png)
+
+# **BeanStalk**
+
+//NOTE: When we have deployed a web application in AWS, we tipically follow a architecture called a three-tier architecture.
+So our users talk to a load balancer, that could be in multiple availability zones.
+Then the load balancer will forward traffic to multiple EC2 instances managed by an auto caling group and then these EC2 instances need to store data somwhere, so they will use a database such as Amazon RDS(RElational Database) to read and write data.
+and if they need to have an in memory database, or an in memory cache, they can also used elastic cache to store and retrieve the session data or the cached data.
+
+**Typical architecture: Web App 3-tier**
+
+![Drag Racing](images/Typical_architecture:3-tier.png)
+
+# **Developer Problems On AWS**
+
+1. Managing infrastructure.
+2. Deploying Code.
+3. Configuring all the databases, load balancers, etc.
+4. Scaling concerns.
+
+5. Most web apps have the same architecture (ALB + ASG).
+6. All the developers want it for their code to run !
+7. Possibly, consistently across different applications and eviroments.
+
+# **AWS Elastic Beanstalk Overview**
+
+1. Elastic Beanstalk is a developer centric view of deploying an application on AWS.
+2. It uses all the component's we've seen before : EC2, ASG, ELB, RDS, etc..
+3. But it's all in one view that's easy to make sense of !
+4. We still have full control over the configuration.
+
+5. Beanstalk = Platform as a Service (PaaS).
+6. Beanstalk is free but you pay for the underlying instances.
+
+# **Elastic BeanStalk**
+
+1.  Managed Service
+
+        1. Instance configuration / OS is handled by Beanstalk.
+        2. Deployment strategy is configurable but performed by Elastic Beanstalk.
+        3. Capacity Provisioning.
+        4. Load balancing & auto-scaling.
+        5. Application health-monitoring & responsiveness.
+
+2.  Just the application code is the responsibility of the developer.
+3.  Three architecture models:
+
+        1. Single Instance deployment : good for dev.
+        2. LB + ASG: great for production or pre-production web applications.
+        3. ASG only: great for non-web apps in production (workers, etc...).
+
+# **Elastic BeanStalk**
+
+1.  Support for many platforms:
+
+        1. Go, Java SE, Java with Tomcat, .NET on Windows server with IIS, Node.js, PHP, Python, Ruby, Packer Builder, Single Container Docker, Multi-Container Docker, Preconfigured Docker.
+
+        2. If not supported, you can write your custom platform (advanced).
+
+//IMPORTANT:
+
+1. Health agent pushes metrics to CloudWatch.
+2. Checks for app health, publishes health events.
