--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -147,3 +147,28 @@ and if they need to have an in memory database, or an in memory cache, they can 
 
 1. Health agent pushes metrics to CloudWatch.
 2. Checks for app health, publishes health events.
+
+# **CodeDeploy**
+
+1. We want to deploy our application **automatically.**
+2. Works with EC2 Instances.
+3. Works with On-Premises Servers.
+4. **Hybrid service**
+5. Servers / Instances must be provisioned and configured ahead of time with the CodeDeploy Agent.
+
+# **CodeCommit**
+
+1.  Before pushing the application code to servers, it needs to be stored somewhere.
+2.  Develoepers usually store code in a repository, using the Git Technology.
+3.  A famous public offering is Github, AWS competing product is **CodeCommit**.
+4.  CodeCommit:
+
+        1. Source-control service that hosts Git-based repositories.
+        2. Makes it easy to collaborate with others on code.
+        3. The code changes are automatically versioned.
+
+5.  Benefits:
+
+        1. Fully managed.
+        2. Scalable & highly available.
+        3. Private, Secured, Integrated with AWS.
