--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -172,3 +172,43 @@ and if they need to have an in memory database, or an in memory cache, they can 
         1. Fully managed.
         2. Scalable & highly available.
         3. Private, Secured, Integrated with AWS.
+
+# **CodeBuild**
+
+1. Code building service in the cloud.
+2. Compiles source code, run tests, and produces packages that are ready to be deployed(by codedeploy for example):
+
+```
+CodeCommit <=== Retrieve code CodeBuild ===>  build code Ready to deploy artifact.
+
+```
+
+3.  Benefits:
+
+        1. Fully, managed, serverless.
+        2. Continuosly scalable & higly available.
+        3. Secure.
+        4. Pay as you go pricing - only pay for the build time.
+
+# **CodePipeline**
+
+1.  **Orchestrate the different steps to have the code automatically pushed to production**
+
+        1. Code => Build => Test => Provision => Deploy
+        2. Basis for CICD (CONTINUOS INTEGRATION & CONTINUOS DELIVERY).
+
+2.  Benefits:
+
+        1. Fully managed, compatible with CodeCommit, CodeBuild, CodeDeploy, Elastic BeanStalk, CloudFormation, Github, 3rd party services (GitHub...) & custom plugins...
+        2. Fast Delivery & rapid updates.
+
+![Drag Racing](images/CodePipeline.png)
+
+# **CodeArtifact**
+
+1. Software packages depend on each other to be built (also called code dependencies), and new ones are created.
+2. Storing and retrieving these dependencies is called **artifact management.**
+3. Traditionally you need to setup your own artifact management system.
+4. **CodeArtifact** is a secure, scalable and cost-effective **artifact** management for software development.
+5. Works with common dependecy management tools such as Maven, Gradle, npm, yarn, twine, pip, and NuGet.
+6. **Developers and CodeBuilt can then retrieve dependencies straight from CodeArtifact.**
