--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -212,3 +212,12 @@ CodeCommit <=== Retrieve code CodeBuild ===>  build code Ready to deploy artifac
 4. **CodeArtifact** is a secure, scalable and cost-effective **artifact** management for software development.
 5. Works with common dependecy management tools such as Maven, Gradle, npm, yarn, twine, pip, and NuGet.
 6. **Developers and CodeBuilt can then retrieve dependencies straight from CodeArtifact.**
+
+# **CodeStar**
+
+1. Unified UI to easily manage software development activities **in one place**.
+2. **"Quick way"** to get started to correctly set-up CodeCommit, CodePipeline, CodeBuild, CodeDeploy, Elastic Beanstalk, EC2, etc...
+3. Can edit the code "in the cloud" using **AWS Cloud9**.
+
+//IMPORTANT:
+//NOTE: So all of this makes CodeStar a Central Service that allows you developers to quickly start with development while using the best CI/CD practices.
