--- a/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
+++ b/AWS-certified-Cloud-Practitioner/subjects/09.Deployments&Managing-Infrastructure-at-Scale.md
@@ -220,4 +220,4 @@ CodeCommit <=== Retrieve code CodeBuild ===>  build code Ready to deploy artifac
 3. Can edit the code "in the cloud" using **AWS Cloud9**.
 
 //IMPORTANT:
-//NOTE: So all of this makes CodeStar a Central Service that allows you developers to quickly start with development while using the best CI/CD practices.
+//NOTE: So all of this makes CodeStar a Central Service that allows you developers to quickly start with development while using the best CI/CD practices..
